[project]
name = "job-orchestrator-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Osvaldo",email = "osvaldobbini@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "job_orchestrator_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
